--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,7 @@
+dj-database-url==0.4.1
 Django==1.9.8
 django-bootstrap3==7.0.1
+gunicorn==19.6.0
 requests==2.10.0
+whitenoise==3.2
+psycopg2==2.5.4
